orquestration/scripts/virtual-service-base-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${NAME}
spec:
  hosts:
    - istio-ingressgateway.istio-system.svc.cluster.local
  gateways:
    - frontend-gateway
  http:
    - route:
        - destination:
            port:
              number: ${PORT}
            host: ${NAME}
      fault:
        delay:
          percent: 100
          fixedDelay: ${DELAY}
